# rust_tutorial

./: notes
async_tutorial/: Cargo.toml
async_tutorial/src/: main.rs
base64_test/: Cargo.toml
base64_test/src/: main.rs
basic/: Cargo.toml
bigdecimal_tutorial/: Cargo.toml
bigdecimal_tutorial/src/: main.rs
boxes/: Cargo.toml
boxes/src/: main.rs
diesel_sqlcipher/: .env  Cargo.toml  test.sqlite
diesel_sqlcipher/migrations/2021-03-08-225013_create_database/: up.sql
diesel_sqlcipher/migrations/2023-04-20-225238_initial/: up.sql
diesel_sqlcipher/src/: lib.rs  main.rs  models.rs  schema.rs
diesel_tutorial/: Cargo.toml
diesel_tutorial/migrations/2022-03-01-201426_create_counter/: up.sql
diesel_tutorial/src/: lib.rs  main.rs  models.rs  schema.rs
env_var/: Cargo.toml
env_var/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: main.rs
fizzbuzz/: Cargo.toml
fizzbuzz/src/: main.rs
grpc_tutorial/: Cargo.toml  build.rs
grpc_tutorial/src/: lib.rs
grpc_tutorial/src/protos/: helloworld.proto  helloworld.rs  helloworld_grpc.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_arm/: Cargo.toml
hello_arm/src/: main.rs
json_test/: Cargo.toml
json_test/src/: main.rs
logging/: Cargo.toml  log
logging/src/: main.rs
opencl/: Cargo.toml
opencl/src/: main.rs
pascal/: Cargo.toml
pep_talk_generator/: Cargo.toml
pep_talk_generator/src/: main.rs
pig_dice/: Cargo.toml
pig_dice/src/: main.rs
prime_sieve/: Cargo.toml
prime_sieve/src/: main.rs
println/: hello
quote_escape/: Cargo.toml
quote_escape/src/: main.rs
rayon-tutorial/: Cargo.toml
rayon-tutorial/src/: main.rs
reqwest_tutorial/: Cargo.toml
reqwest_tutorial/src/: main.rs
retry_test/: Cargo.toml
retry_test/src/: main.rs
reverse_string_words/: Cargo.toml
reverse_string_words/src/: main.rs
rng/: Cargo.toml
rng/src/: main.rs
rocket_tutorial/: Cargo.toml  Rocket.toml  stress.py
rocket_tutorial/migrations/2022-03-01-201426_create_counter/: up.sql
rocket_tutorial/src/: main.rs
rot13/: Cargo.toml
rot13/src/: main.rs
rusqlite_sqlcipher/: Cargo.toml  rusqlite_sqlcipher
rusqlite_sqlcipher/src/: main.rs
scratch/: Cargo.toml
scratch/src/: main.rs
serde_tutorial/: Cargo.toml
serde_tutorial/src/: main.rs
shamir-tutorial/: Cargo.toml
shamir-tutorial/src/: main.rs
termion-tutorial/: Cargo.toml
triangle-numbers/: Cargo.toml
triangle-numbers/src/: main.rs
