[package]
name = "diesel_sqlcipher_test"
version = "0.1.0"
authors = ["Christian Oudard <christian.oudard@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { git = "https://github.com/mobilecoinofficial/diesel", branch = "1.4.x-bundled-sqlcipher", features = ["sqlite", "sqlcipher-bundled"] }
diesel_migrations = { git = "https://github.com/mobilecoinofficial/diesel", branch = "1.4.x-bundled-sqlcipher", features = ["sqlite"] }
dotenv = "0.15.0"
