[package]
name = "grpc_tutorial"
version = "0.1.0"
authors = ["Christian Oudard <christian.oudard@gmail.com>"]
edition = "2018"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio = "0.9.0"
grpcio-proto = "0.9.0"
protobuf = "~2"
log = "0.4.0"
env_logger = "0.8.4"
futures = "0.3"

[[bin]]
name = "server"

[[bin]]
name = "client"

[build-dependencies]
protoc-grpcio = "3.0.0"

