[package]
name = "reqwest_tutorial"
version = "0.1.0"
authors = ["Christian Oudard <christian.oudard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "^0.8"
reqwest = { version = "^0.11",  features = ["blocking", "json"] }

