[package]
name = "rocket_tutorial"
version = "0.1.0"

[dependencies]
rocket = { version = "0.4.10", default-features = false }
rocket_contrib = { version = "0.4.10", default-features = false, features = ["diesel_sqlite_pool"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
r2d2 = "0.8.9"
