[package]
name = "rocket_tutorial"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/rocket/", tag = "v0.5.0-rc.1" }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/rocket", tag = "v0.5.0-rc.1", features = ["diesel_sqlite_pool", "sqlite_pool"] }
diesel = { version = "1.4.8", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4.0"
